packetcrypt-sys/packetcrypt/include/packetcrypt/BlockMine.h

typedef struct BlockMine_Res_s {
    uint32_t high_nonce;
    uint32_t low_nonce;

    // Memory locations of anns
    uint32_t ann_mlocs[4];

    // Logical locatiosn of anns
    uint32_t ann_llocs[4];

    uint32_t job_num;
} BlockMine_Res_t;