packetcrypt-sys/bindings.rs

#[test]
fn bindgen_test_layout_PacketCrypt_Coinbase_t() {
    assert_eq!(
        ::std::mem::size_of::<PacketCrypt_Coinbase_t>(),
        48usize,
        concat!("Size of: ", stringify!(PacketCrypt_Coinbase_t))
    );
    assert_eq!(
        ::std::mem::align_of::<PacketCrypt_Coinbase_t>(),
        8usize,
        concat!("Alignment of ", stringify!(PacketCrypt_Coinbase_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<PacketCrypt_Coinbase_t>())).magic as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(PacketCrypt_Coinbase_t),
            "::",
            stringify!(magic)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<PacketCrypt_Coinbase_t>())).annLeastWorkTarget as *const _
                as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(PacketCrypt_Coinbase_t),
            "::",
            stringify!(annLeastWorkTarget)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<PacketCrypt_Coinbase_t>())).merkleRoot as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(PacketCrypt_Coinbase_t),
            "::",
            stringify!(merkleRoot)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<PacketCrypt_Coinbase_t>())).numAnns as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(PacketCrypt_Coinbase_t),
            "::",
            stringify!(numAnns)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct PacketCrypt_ValidateCtx_s {
    _unused: [u8; 0],
}
pub type PacketCrypt_ValidateCtx_t = PacketCrypt_ValidateCtx_s;
extern "C" {
    pub fn ValidateCtx_create() -> *mut PacketCrypt_ValidateCtx_t;
}
extern "C" {
    pub fn ValidateCtx_destroy(ctx: *mut PacketCrypt_ValidateCtx_t);
}
extern "C" {
    pub fn Validate_checkAnn_outToString(
        code: ::std::os::raw::c_int,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn Validate_checkAnn(
        annHashOut: *mut u8,
        pcAnn: *const PacketCrypt_Announce_t,
        parentBlockHash: *const u8,
        vctx: *mut PacketCrypt_ValidateCtx_t,
    ) -> ::std::os::raw::c_int;
}
pub const Validate_checkBlock_Res_Validate_checkBlock_OK: Validate_checkBlock_Res = 0;
pub const Validate_checkBlock_Res_Validate_checkBlock_SHARE_OK: Validate_checkBlock_Res = 256;
pub const Validate_checkBlock_Res_Validate_checkBlock_ANN_INVALID_: Validate_checkBlock_Res = 512;
pub const Validate_checkBlock_Res_Validate_checkBlock_ANN_INSUF_POW_: Validate_checkBlock_Res = 768;
pub const Validate_checkBlock_Res_Validate_checkBlock_ANN_SIG_INVALID_: Validate_checkBlock_Res =
    1024;
pub const Validate_checkBlock_Res_Validate_checkBlock_ANN_CONTENT_INVALID_:
    Validate_checkBlock_Res = 1280;
pub const Validate_checkBlock_Res_Validate_checkBlock_PCP_INVAL: Validate_checkBlock_Res = 1536;
pub const Validate_checkBlock_Res_Validate_checkBlock_PCP_MISMATCH: Validate_checkBlock_Res = 1792;
pub const Validate_checkBlock_Res_Validate_checkBlock_INSUF_POW: Validate_checkBlock_Res = 2048;
pub const Validate_checkBlock_Res_Validate_checkBlock_BAD_COINBASE: Validate_checkBlock_Res = 2304;
pub type Validate_checkBlock_Res = ::std::os::raw::c_uint;
extern "C" {
    pub fn Validate_checkBlock_outToString(
        code: ::std::os::raw::c_int,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn Validate_checkBlock(
        hap: *const PacketCrypt_HeaderAndProof_t,
        hapLen: u32,
        blockHeight: u32,
        shareTarget: u32,
        coinbaseCommitment: *const PacketCrypt_Coinbase_t,
        blockHashes: *const u8,
        workHashOut: *mut u8,
        vctx: *mut PacketCrypt_ValidateCtx_t,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AnnMiner_s {
    _unused: [u8; 0],
}
pub type AnnMiner_t = AnnMiner_s;
pub type AnnMiner_Callback = ::std::option::Option<
    unsafe extern "C" fn(callback_ctx: *mut ::std::os::raw::c_void, ann_buf: *mut u8),
>;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct AnnMiner_Request_s {
    pub workTarget: u32,
    pub parentBlockHeight: u32,
    pub parentBlockHash: [u8; 32usize],
    pub signingKey: [u8; 32usize],
    pub contentType: u32,
    pub contentLen: u32,
}
#[test]
fn bindgen_test_layout_AnnMiner_Request_s() {
    assert_eq!(
        ::std::mem::size_of::<AnnMiner_Request_s>(),
        80usize,
        concat!("Size of: ", stringify!(AnnMiner_Request_s))
    );
    assert_eq!(
        ::std::mem::align_of::<AnnMiner_Request_s>(),
        4usize,
        concat!("Alignment of ", stringify!(AnnMiner_Request_s))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<AnnMiner_Request_s>())).workTarget as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(AnnMiner_Request_s),
            "::",
            stringify!(workTarget)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<AnnMiner_Request_s>())).parentBlockHeight as *const _ as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(AnnMiner_Request_s),
            "::",
            stringify!(parentBlockHeight)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<AnnMiner_Request_s>())).parentBlockHash as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(AnnMiner_Request_s),
            "::",
            stringify!(parentBlockHash)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<AnnMiner_Request_s>())).signingKey as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(AnnMiner_Request_s),
            "::",
            stringify!(signingKey)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<AnnMiner_Request_s>())).contentType as *const _ as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(AnnMiner_Request_s),
            "::",
            stringify!(contentType)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<AnnMiner_Request_s>())).contentLen as *const _ as usize },
        76usize,
        concat!(
            "Offset of field: ",
            stringify!(AnnMiner_Request_s),
            "::",
            stringify!(contentLen)
        )
    );
}
pub type AnnMiner_Request_t = AnnMiner_Request_s;
extern "C" {
    pub fn AnnMiner_create(
        minerId: u32,
        threads: ::std::os::raw::c_int,
        callback_ctx: *mut ::std::os::raw::c_void,
        ann_found: AnnMiner_Callback,
    ) -> *mut AnnMiner_t;
}
extern "C" {
    pub fn AnnMiner_start(
        ctx: *mut AnnMiner_t,
        req: *mut AnnMiner_Request_t,
        version: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn AnnMiner_stop(miner: *mut AnnMiner_t);
}
extern "C" {
    pub fn AnnMiner_free(miner: *mut AnnMiner_t);
}
extern "C" {
    pub fn AnnMiner_hashesPerSecond(ctx: *mut AnnMiner_t) -> f64;
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct ProofTree_Entry_t {
    pub hash: [u8; 32usize],
    pub start: u64,
    pub end: u64,
}
#[test]
fn bindgen_test_layout_ProofTree_Entry_t() {
    assert_eq!(
        ::std::mem::size_of::<ProofTree_Entry_t>(),
        48usize,
        concat!("Size of: ", stringify!(ProofTree_Entry_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ProofTree_Entry_t>(),
        8usize,
        concat!("Alignment of ", stringify!(ProofTree_Entry_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ProofTree_Entry_t>())).hash as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ProofTree_Entry_t),
            "::",
            stringify!(hash)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ProofTree_Entry_t>())).start as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ProofTree_Entry_t),
            "::",
            stringify!(start)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ProofTree_Entry_t>())).end as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(ProofTree_Entry_t),
            "::",
            stringify!(end)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ProofTree_s {
    _unused: [u8; 0],
}
pub type ProofTree_t = ProofTree_s;
extern "C" {
    pub fn ProofTree_create(maxAnns: u32) -> *mut ProofTree_t;
}
extern "C" {
    pub fn ProofTree_destroy(arg1: *mut ProofTree_t);
}
extern "C" {
    pub fn ProofTree_hashPair(table: *const ProofTree_Entry_t, odx: u64, idx: u64);
}
extern "C" {
    pub fn ProofTree_complete(pt: *mut ProofTree_t, rootHashOut: *mut u8) -> u64;
}
extern "C" {
    pub fn ProofTree_putEntry(pt: *mut ProofTree_t, index: u32, entry: *const ProofTree_Entry_t);
}
extern "C" {
    pub fn ProofTree_prepare2(pt: *mut ProofTree_t, totalAnns: u64);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ProofTree_Proof_s {
    pub size: u32,
    pub data: *mut u8,
}
#[test]
fn bindgen_test_layout_ProofTree_Proof_s() {
    assert_eq!(
        ::std::mem::size_of::<ProofTree_Proof_s>(),
        16usize,
        concat!("Size of: ", stringify!(ProofTree_Proof_s))
    );
    assert_eq!(
        ::std::mem::align_of::<ProofTree_Proof_s>(),
        8usize,
        concat!("Alignment of ", stringify!(ProofTree_Proof_s))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ProofTree_Proof_s>())).size as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ProofTree_Proof_s),
            "::",
            stringify!(size)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ProofTree_Proof_s>())).data as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ProofTree_Proof_s),
            "::",
            stringify!(data)
        )
    );
}
impl Default for ProofTree_Proof_s {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
pub type ProofTree_Proof_t = ProofTree_Proof_s;
extern "C" {
    pub fn ProofTree_mkProof(
        table: *const ProofTree_Entry_t,
        annCount: u64,
        rootHash: *const u8,
        annNumbers: *const u64,
    ) -> *mut ProofTree_Proof_t;
}
extern "C" {
    pub fn ProofTree_destroyProof(arg1: *mut ProofTree_Proof_t);
}
extern "C" {
    pub fn ProofTree_getTable(pt: *mut ProofTree_t) -> *mut ProofTree_Entry_t;
}
extern "C" {
    pub fn ProofTree_capacity(pt: *mut ProofTree_t) -> u64;
}
extern "C" {
    pub fn PacketCryptProof_entryCount(totalAnns: u64) -> u64;
}
extern "C" {
    pub fn ProofTree_complete2(
        table: *const ProofTree_Entry_t,
        annCountZeroIncl: u64,
        rootHash: *mut u8,
    ) -> u64;
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct BlockMine_Res_s {
    pub high_nonce: u32,
    pub low_nonce: u32,
    pub ann_mlocs: [u32; 4usize],
    pub ann_llocs: [u32; 4usize],
    pub job_num: u32,
}
